# distill-embeddings

./: .gitignore  README.md  data  eval.py  eval_jmteb.py  eval_mteb.py  get_id_iso.py  get_isoscore.py  get_mteb_score.py  logs  main.py  output  pyproject.toml  requirements.txt  tasks.yaml  train.py
script/: dl_triplet_en.sh  eval.sh  eval_mig.sh  eval_subset.sh  genkai_encode-en-single.sh  genkai_encode-en.sh  genkai_encode-ja-single.sh  genkai_encode-ja.sh  genkai_encode_clus_en_single.sh  genkai_eval.sh  genkai_get_isoscore.sh  genkai_mining.sh  genkai_neg_encode-en-single.sh  genkai_train.sh  genkai_train_ckd.sh  genkai_train_ckd_en.sh  genkai_train_ckd_ja.sh  genkai_train_cse_en.sh  genkai_train_cse_ja.sh  genkai_train_kld.sh  genkai_train_kld_130m.sh  genkai_train_kld_en.sh  genkai_train_kld_ja.sh  posthoc_eval_all.sh  preprocess.sh  sup_simcse.sh  taid.sh  train-eng.sh  train-jpn.sh  train.sh  w_neg_train-eng.sh
script/0815/: 01.sh  02.sh  03.sh  04.sh  05.sh
script/0818/: 01.sh  02.sh  03.sh  04.sh
script/0819/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh
script/0820/: 01.sh  02.sh
script/0821/: 01.sh  02.sh  03.sh
script/0822/: 01.sh  02.sh
script/0825/: 01.sh  02.sh  03.sh  04.sh  05.sh
script/0826/: 01.sh  02.sh  03.sh  04.sh  05.sh
script/0827/: 01.sh
script/0828/: 01.sh  02.sh  03.sh
script/0829/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh
script/0902/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh  08.sh  09.sh  10.sh  11.sh
script/0903/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh  08.sh  09.sh
script/0904/: 01.sh  02.sh  03.sh
script/0905/: 01.sh  02.sh
script/0908/: 01.sh  02.sh
script/0909/: 01.sh  02.sh  03.sh  04.sh  05.sh
script/0910/: 01.sh  02.sh
script/0911/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh  resume_16.sh  resume_17.sh  resume_18.sh  resume_20.sh
script/0912/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh  genkai_main.sh  genkai_main_02.sh  resume_03.sh  resume_09.sh  resume_21.sh
script/0916/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh  genkai_main03.sh
script/0924/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh  genkai_main04.sh  resume_32.sh
script/final_result/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh  09.sh  10.sh  11.sh  12.sh  13.sh  14.sh  15.sh  16.sh  17.sh  18.sh  19.sh  20.sh  21.sh  22.sh  23.sh  24.sh  25.sh  26.sh  27.sh  28.sh  29.sh  30.sh  31.sh  32.sh  33.sh  34.sh  35.sh  36.sh  37.sh  38.sh  39.sh  40.sh  41.sh  (+26 more)
src/: arguments.py  data.py  loss.py  model.py  scheduler.py  train.py  utils.py
src/aggregate/: agg_config.yaml  csv_agg.py  rewrite_data_name.py  wandb_agg.py
src/data_processing/: encode_utils.py
src/data_processing/finweb/: encode.py
src/data_processing/for_analysis_data/: prepare.py
src/data_processing/gte_en_data/: bge_data.py  encode.py  fever.py  ms-marco.py  summarize_dataset.py
src/data_processing/gte_en_plus_data/: concat_data.py  concat_neg_data.py  encode.py  get_neg_from_bge.py  get_neg_from_st.py  mining_fever_neg.py  neg_encode.py  prepro.py
src/distil_losses/: __init__.py  base.py  ckd.py  distill.py  dp_kld.py  js.py  kld.py  mse.py  taid.py
src/evaluation/: get_id_iso.py  get_mteb_score.py  posthoc_eval_batch.py  posthoc_eval_to_wandb.py  run_jmteb.py  run_mteb.py  wandb_agg.py
src/postprocess/: wandb_agg.py
src/preprocess/: data_encode.py  encode_utils.py  fineweb_encode.py  triplet-en_encode.py  triplet-en_prepro.py  triplet-ja_encode.py
src/preprocess/gte_en_data/: encode.py  (+3 more)
src/tools/: extract_student_from_ds.py
src/training/: arguments.py  data.py  loss.py  model.py  scheduler.py  train.py  train_simcse.py
(+20 files in other folders)
