[project]
name = "distill-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "datasets<4.0.0",
    "lightning>=2.5.2",
    "mteb>=1.38.33",
    "numpy<2.0.0",
    "sentence-transformers>=5.0.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "wandb>=0.21.0",
]


[[tool.uv.index]]
name = "tocrh-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "tocrh-gpu" },
]
