[project]
name = "distill-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "cachetools>=6.1.0",
    "certifi>=2025.8.3",
    "datasets<4.0.0",
    "deepspeed>=0.17.4",
    "einops>=0.8.1",
    "gradio>=5.42.0",
    "ipykernel>=6.30.1",
    "isoscore>=2.0.1",
    "lightning>=2.5.2",
    "matplotlib>=3.10.5",
    "mteb>=1.38.33",
    "numpy<2.0.0",
    "plotly>=6.3.0",
    "polars>=1.32.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "wandb>=0.21.0",
]


[[tool.uv.index]]
name = "tocrh-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "tocrh-gpu" },
]
