[project]
name = "distill-embeddings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "cachetools>=6.1.0",
    "certifi>=2025.8.3",
    "datasets<4.0.0",
    "deepspeed>=0.17.4",
    "einops>=0.8.1",
    "faiss-cpu>=1.12.0",
    "gradio>=5.42.0",
    "ipykernel>=6.30.1",
    "isoscore>=2.0.1",
    "lightning>=2.5.2",
    "matplotlib>=3.10.5",
    "more-itertools>=10.8.0",
    "mteb>=1.38.33",
    "numpy<2.0.0",
    "peft>=0.17.1",
    "plotly>=6.3.0",
    "polars>=1.32.0",
    "pyyaml>=6.0.2",
    "scikit-dimension>=0.3.4",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
    "wandb>=0.21.0",
]


[[tool.uv.index]]
name = "tocrh-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "tocrh-gpu" },
]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
# 有効にするLintルールのセットを指定します。
# "E", "F": Flake8の基本的なエラーとロジックエラーを有効化 (必須レベル)
# "W": Flake8の警告
# "I": isort互換のインポート整理ルール
# "UP": pyupgradeのルール。新しいPython構文への自動書き換えを提案。
# "B": flake8-bugbearのルール。よくあるバグや設計上の問題点を検出。
# "C4": flake8-comprehensionsのルール。冗長な内包表記を簡潔に修正。
# "A": flake8-builtinsのルール。組み込み関数や変数名のシャドーイングを警告。
select = ["E", "F", "W", "I", "UP", "B", "C4", "A"]

# 無効にする（無視する）ルールを指定します。
# E501: 1行の文字数オーバー（これはruff formatが担当するのでLintからは除外）
# B905: `zip`をstrict=Trueなしで使うことへの警告。場合によっては不要なので除外候補。
# E402: モジュールレベルのインポートがファイルの先頭にない（実行コードの後にimportがある場合）
ignore = ["E501", "B905", "E402"]

# 自動修正できないルール（例：複雑すぎて人間の判断が必要なもの）を無視する設定
# CI/CDではチェックしたいが、開発中は無視したい場合に便利です。
# unfixable = []

# 除外するファイルやディレクトリ
# .venv（仮想環境）や自動生成ファイルなどを指定します。
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.format]
preview = true
